# py_module_test

./: CMakeLists.txt  pyproject.toml
.github/workflows/: build_wheels.yml
addpkg/: __init__.py  a1.pyf  a2.f90  a2.pyf  addlib.py
addpkg/a1/: a1.pyf
addpkg/a2/: a2.f90  a2.pyf
